<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:elevation="0dp"
        android:padding="8dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/up_button"
            android:focusable="true"
            android:minWidth="24dp"
            android:minHeight="24dp"
            app:srcCompat="@drawable/ic_arrow_back"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/create_invoice"
            android:textColor="@color/gray_dark"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="11dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin"
            android:clickable="true"
            android:contentDescription="@string/done"
            android:focusable="true"
            android:minWidth="24dp"
            android:minHeight="24dp"
            app:srcCompat="@drawable/ic_check_btn"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="359dp"
            tools:layout_editor_absoluteY="14dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="36dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
