<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin"
    android:theme="@style/Theme.MaterialComponents.Light.BottomSheetDialog"
    tools:context=".MenuDialogFragment">

    <FrameLayout
        android:id="@+id/title_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_title"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start|center_vertical"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            tools:text="Priceelist 21082021" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_total"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="end|center_vertical"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            tools:text="$999,999" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_1"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_frame">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_copy_text"
            android:layout_width="164dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/list_item_spacing"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical|start"
            android:text="@string/make_copy"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_copy_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_copy_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:foregroundGravity="bottom"
            android:tint="@color/primary1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_file_duplicate" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_2"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_copy">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_delete_text"
            android:layout_width="164dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/list_item_spacing"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical|start"
            android:text="@string/menu_delete"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_delete_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_delete_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:foregroundGravity="bottom"
            android:tint="@color/primary1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_trash" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_2"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_delete">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_download_text"
            android:layout_width="164dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/list_item_spacing"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical|start"
            android:text="@string/download"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_download_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_download_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:foregroundGravity="bottom"
            android:tint="@color/primary1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_download" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_2"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_download">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_share_text"
            android:layout_width="164dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/list_item_spacing"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical|start"
            android:text="@string/menu_share"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_share_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_share_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:foregroundGravity="bottom"
            android:tint="@color/primary1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>